force-app/main/default/objects/Apttus__Agreement_Rule__c/Apttus__Agreement_Rule__c.object-meta.xml
<CustomObject>
    <description>Specifies a rule used to evaluate various agreement actions such as submit request</description>
    <label>Agreement Rule</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>