force-app/main/default/objects/Apttus__Agreement_Rule__c/fields/Apttus__Active__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Rule active indicator. Inactive rules are ignored by the rule selection process</description>
    <inlineHelpText>Indicates whether the rule is active. Inactive rules are ignored.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>