force-app/main/default/objects/Apttus__Agreement_Rule__c/fields/Apttus__ConditionFilterLogic__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ConditionFilterLogic__c</fullName>
    <description>The condition filter logic expression</description>
    <inlineHelpText>Enter any combination of AND, OR, parenthesis, and numbers representing the expressions. These are the only values that can be used. Using other values may cause unexpected behavior.</inlineHelpText>
    <label>Condition Filter Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>