force-app/main/default/objects/Apttus__Agreement_Rule__c/fields/Apttus__InclusionCriteriaFieldValue__c.field-meta.xml
<CustomField>
    <fullName>Apttus__InclusionCriteriaFieldValue__c</fullName>
    <description>The rule inclusion criteria value</description>
    <label>Inclusion Criteria Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>