force-app/main/default/objects/Apttus__Agreement_Rule__c/fields/Apttus__Order__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Order__c</fullName>
    <description>Rule sequence</description>
    <inlineHelpText>Rule sequence</inlineHelpText>
    <label>Sequence</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>