force-app/main/default/objects/Apttus__Agreement_Rule__c/fields/Apttus__Rule_Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Rule_Description__c</fullName>
    <label>Rule Description</label>
    <type>TextArea</type>
</CustomField>