force-app/main/default/objects/Apttus__Agreement_Rule__c/fields/Apttus__Rule_Object__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Rule_Object__c</fullName>
    <label>Rule Object</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Apttus__Rule_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>APTS_Agreement__c</fullName>
            </value>
            <value>
                <fullName>APTS_Template__c</fullName>
            </value>
            <value>
                <fullName>EmailTemplate</fullName>
            </value>
            <value>
                <fullName>QueueSObject</fullName>
            </value>
            <value>
                <fullName>Folder</fullName>
            </value>
            <value>
                <fullName>Apttus__APTS_Agreement__c</fullName>
            </value>
            <value>
                <fullName>Apttus__APTS_Template__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>