force-app/main/default/objects/Apttus__Agreement_Rule__c/fields/Apttus__Rule_Type__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Rule_Type__c</fullName>
    <label>Rule Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agreement Template</fullName>
            </value>
            <value>
                <fullName>Agreement Type</fullName>
            </value>
            <value>
                <fullName>Email Template</fullName>
            </value>
            <value>
                <fullName>Queue Assignment</fullName>
            </value>
            <value>
                <fullName>Submit Request Mode</fullName>
            </value>
            <value>
                <fullName>Document Folder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>