force-app/main/default/objects/Apttus__Agreement_Rule__c/fields/Apttus__Rule_Value__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Rule_Value__c</fullName>
    <label>Rule Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>