force-app/main/default/objects/Apttus__Agreement_Rule__c/listViews/Apttus__All.listView-meta.xml
<ListView>
    <fullName>Apttus__All</fullName>
    <columns>NAME</columns>
    <columns>Apttus__Active__c</columns>
    <columns>Apttus__Order__c</columns>
    <columns>Apttus__Rule_Type__c</columns>
    <columns>Apttus__Rule_Object__c</columns>
    <columns>Apttus__Rule_Field__c</columns>
    <columns>Apttus__Rule_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>